# atlatl

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: lib.rs
src/: index.rs  lib.rs  segment.rs
src/fst/: builder.rs  error.rs  intermediate.rs  mod.rs  output.rs
tests/: lib.rs
