[package]
name = "atlatl"
version = "0.1.2"

authors = ["tapeinosyne <andrew@banausia.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tapeinosyne/atlatl"
homepage = "https://github.com/tapeinosyne/atlatl"
# documentation = "https://docs.rs/atlatl"

readme = "README.md"
description = "Double-array tries."
# categories = ["data-structures"]
keywords = ["double-array", "trie"]


[dependencies]
fnv = "1.0"
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
fst = "0.1"
lazy_static = "1.1"
quickcheck = "0.7"
rand = "0.5"
